# public-incentives

./: .env.sample  .gitignore  ARCHITECTURE_DIAGRAM.md  EMBEDDINGS_IMPLEMENTATION.md  Makefile  README.md  README_EVALUATOR.md  docker-compose.yml  env.example  setup_complete_system.sh  test_complete_system.py  test_final_system.py
backend/: alembic.ini  embedding_cache.pkl  performance_log.json  pyproject.toml  requirements_embeddings.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_restructure_to_3_tables.py  e881bbc2a67b_add_ai_cost_tracking_table.py
backend/app/: main.py
backend/data/: matches_20251025_230942.csv  matches_20251025_232350.csv  matches_20251025_233649.csv
backend/scripts/: create_sample_csvs.py  generate_embeddings_for_companies.py  generate_matches_for_chatbot.py  import_sample_data.py  optimize_hybrid_system.py  save_matches_for_chatbot.py  setup_full_system_for_evaluator.py  test_5_incentives_200_companies.py  test_ai_processing_visual.py  test_ai_processor_cae.py  test_chatbot.py  test_complete_end_to_end.py  test_complete_matching.py  test_corrected_end_to_end.py  test_cost_optimized.py  test_database_creation.py  test_database_simple.py  test_hybrid_matching.py  test_hybrid_with_costs.py  test_matching_cheap.py  test_matching_visual.py  test_sector_region_size.py  test_system_1_incentive_50_companies.py  test_unified_scorer_correct_cae.py  test_unified_scorer_deep.py  test_unified_scorer_with_cae.py  test_unified_simple.py  validate_database_structure.py  validate_import.py
backend/tests/: README.md  __init__.py  conftest.py  test_api_basic.py
(+28 files in other folders)
