[project]
name = "public-incentives-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg2-binary",
  "alembic",
  "pydantic",
  "python-dotenv",
  "pandas",
  "openai",
  "python-multipart",
  "aiofiles",
  "python-dateutil",
  "chromadb",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
